[gd_scene load_steps=7 format=2]

[ext_resource path="res://DUNGEON/Scene Assets/Material.material" type="Material" id=1]
[ext_resource path="res://DUNGEON/Script/Cristallo.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Pickitem.ogg" type="AudioStream" id=3]

[sub_resource type="ArrayMesh" id=1]
surfaces/0 = {
"aabb": AABB( -0.2125, 0.00528848, -0.25, 0.42501, 0.375, 0.5 ),
"array_data": PoolByteArray( 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 189, 96, 174, 0, 0, 76, 90, 211, 129, 204, 53, 92, 49, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 61, 96, 174, 0, 0, 76, 90, 211, 129, 204, 53, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 96, 174, 0, 0, 76, 90, 211, 129, 255, 52, 245, 55, 49, 130, 39, 49, 44, 181, 194, 62, 0, 0, 0, 190, 0, 127, 0, 0, 62, 0, 146, 129, 255, 52, 30, 25, 153, 153, 217, 189, 44, 181, 194, 62, 254, 255, 127, 189, 0, 127, 0, 0, 62, 0, 146, 129, 153, 52, 30, 25, 152, 153, 217, 189, 44, 181, 194, 62, 1, 0, 128, 61, 0, 127, 0, 0, 62, 0, 146, 129, 153, 52, 30, 25, 96, 36, 98, 50, 44, 181, 194, 62, 0, 0, 0, 62, 0, 127, 0, 0, 194, 0, 110, 129, 255, 52, 30, 25, 155, 153, 217, 61, 44, 181, 194, 62, 254, 255, 127, 61, 0, 127, 0, 0, 0, 0, 127, 129, 102, 53, 30, 25, 155, 153, 217, 61, 44, 181, 194, 62, 252, 255, 127, 189, 0, 127, 0, 0, 62, 0, 110, 129, 102, 53, 30, 25, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 61, 96, 82, 0, 0, 76, 166, 45, 129, 204, 53, 92, 49, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 189, 96, 82, 0, 0, 76, 166, 45, 129, 204, 53, 92, 49, 155, 153, 217, 61, 44, 181, 194, 62, 252, 255, 127, 189, 96, 82, 0, 0, 54, 193, 161, 129, 102, 53, 30, 25, 155, 153, 217, 61, 44, 181, 194, 62, 254, 255, 127, 61, 96, 82, 0, 0, 76, 166, 45, 129, 102, 53, 30, 25, 153, 153, 89, 190, 44, 181, 130, 62, 1, 0, 0, 62, 208, 82, 82, 0, 109, 0, 64, 129, 51, 52, 92, 49, 212, 67, 184, 50, 44, 181, 130, 62, 0, 0, 128, 62, 208, 82, 82, 0, 109, 0, 64, 129, 255, 52, 92, 49, 96, 36, 98, 50, 44, 181, 194, 62, 0, 0, 0, 62, 208, 82, 82, 0, 109, 0, 64, 129, 255, 52, 30, 25, 152, 153, 217, 189, 44, 181, 194, 62, 1, 0, 128, 61, 208, 82, 82, 0, 109, 0, 64, 129, 153, 52, 30, 25, 0, 0, 0, 0, 44, 181, 130, 62, 0, 0, 128, 190, 208, 82, 174, 0, 109, 0, 192, 127, 255, 52, 92, 49, 154, 153, 89, 190, 44, 181, 130, 62, 255, 255, 255, 189, 208, 82, 174, 0, 109, 0, 192, 127, 51, 52, 92, 49, 153, 153, 217, 189, 44, 181, 194, 62, 254, 255, 127, 189, 208, 82, 174, 0, 109, 0, 192, 127, 153, 52, 30, 25, 49, 130, 39, 49, 44, 181, 194, 62, 0, 0, 0, 190, 208, 82, 174, 0, 109, 0, 192, 127, 255, 52, 30, 25, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 189, 48, 82, 174, 0, 109, 0, 64, 127, 204, 53, 92, 49, 0, 0, 0, 0, 44, 181, 130, 62, 0, 0, 128, 190, 48, 82, 174, 0, 109, 0, 64, 127, 255, 52, 92, 49, 49, 130, 39, 49, 44, 181, 194, 62, 0, 0, 0, 190, 48, 82, 174, 0, 109, 0, 64, 127, 255, 52, 30, 25, 155, 153, 217, 61, 44, 181, 194, 62, 252, 255, 127, 189, 48, 82, 174, 0, 109, 0, 64, 127, 102, 53, 30, 25, 212, 67, 184, 50, 44, 181, 130, 62, 0, 0, 128, 62, 48, 82, 82, 0, 109, 0, 192, 129, 255, 52, 92, 49, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 61, 48, 82, 82, 0, 109, 0, 192, 129, 204, 53, 92, 49, 155, 153, 217, 61, 44, 181, 194, 62, 254, 255, 127, 61, 48, 82, 82, 0, 109, 0, 192, 129, 102, 53, 30, 25, 96, 36, 98, 50, 44, 181, 194, 62, 0, 0, 0, 62, 48, 82, 82, 0, 109, 0, 192, 129, 255, 52, 30, 25, 154, 153, 89, 190, 44, 181, 130, 62, 255, 255, 255, 189, 160, 82, 0, 0, 180, 166, 211, 129, 51, 52, 92, 49, 153, 153, 89, 190, 44, 181, 130, 62, 1, 0, 0, 62, 160, 82, 0, 0, 180, 166, 211, 129, 51, 52, 92, 49, 152, 153, 217, 189, 44, 181, 194, 62, 1, 0, 128, 61, 160, 82, 0, 0, 202, 193, 95, 129, 153, 52, 30, 25, 153, 153, 217, 189, 44, 181, 194, 62, 254, 255, 127, 189, 160, 82, 0, 0, 180, 166, 211, 129, 153, 52, 30, 25, 212, 67, 184, 50, 44, 181, 130, 62, 0, 0, 128, 62, 208, 174, 82, 0, 109, 0, 64, 129, 255, 52, 92, 49, 153, 153, 89, 190, 44, 181, 130, 62, 1, 0, 0, 62, 208, 174, 82, 0, 109, 0, 64, 129, 51, 52, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 208, 174, 82, 0, 109, 0, 64, 129, 255, 52, 245, 55, 154, 153, 89, 190, 44, 181, 130, 62, 255, 255, 255, 189, 208, 174, 174, 0, 109, 0, 192, 127, 51, 52, 92, 49, 0, 0, 0, 0, 44, 181, 130, 62, 0, 0, 128, 190, 208, 174, 174, 0, 109, 0, 192, 127, 255, 52, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 208, 174, 174, 0, 109, 0, 192, 127, 255, 52, 245, 55, 0, 0, 0, 0, 44, 181, 130, 62, 0, 0, 128, 190, 48, 174, 174, 0, 109, 0, 64, 127, 255, 52, 92, 49, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 189, 48, 174, 174, 0, 109, 0, 64, 127, 204, 53, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 48, 174, 174, 0, 109, 0, 64, 127, 255, 52, 245, 55, 154, 153, 89, 62, 44, 181, 130, 62, 253, 255, 255, 61, 48, 174, 82, 0, 109, 0, 192, 129, 204, 53, 92, 49, 212, 67, 184, 50, 44, 181, 130, 62, 0, 0, 128, 62, 48, 174, 82, 0, 109, 0, 192, 129, 255, 52, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 48, 174, 82, 0, 109, 0, 192, 129, 255, 52, 245, 55, 153, 153, 89, 190, 44, 181, 130, 62, 1, 0, 0, 62, 160, 174, 0, 0, 180, 90, 45, 129, 51, 52, 92, 49, 154, 153, 89, 190, 44, 181, 130, 62, 255, 255, 255, 189, 160, 174, 0, 0, 180, 90, 45, 129, 51, 52, 92, 49, 35, 238, 228, 49, 0, 75, 173, 59, 171, 170, 42, 177, 160, 174, 0, 0, 180, 90, 45, 129, 255, 52, 245, 55 ),
"array_index_data": PoolByteArray( 2, 0, 1, 0, 0, 0, 3, 0, 8, 0, 7, 0, 3, 0, 7, 0, 6, 0, 3, 0, 6, 0, 5, 0, 5, 0, 4, 0, 3, 0, 12, 0, 10, 0, 9, 0, 12, 0, 11, 0, 10, 0, 16, 0, 14, 0, 13, 0, 16, 0, 15, 0, 14, 0, 20, 0, 18, 0, 17, 0, 20, 0, 19, 0, 18, 0, 24, 0, 22, 0, 21, 0, 24, 0, 23, 0, 22, 0, 28, 0, 26, 0, 25, 0, 28, 0, 27, 0, 26, 0, 32, 0, 30, 0, 29, 0, 32, 0, 31, 0, 30, 0, 35, 0, 34, 0, 33, 0, 38, 0, 37, 0, 36, 0, 41, 0, 40, 0, 39, 0, 44, 0, 43, 0, 42, 0, 47, 0, 46, 0, 45, 0 ),
"blend_shape_data": [  ],
"format": 97559,
"index_count": 66,
"material": ExtResource( 1 ),
"name": "Circle.004",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 48
}

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.248828, 0.209719, 0.255721 )

[sub_resource type="Animation" id=3]
resource_name = "animationItems"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("cristalloMesh:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 7, 0, 0 ), Vector3( 7, 0.439155, 0 ), Vector3( 7, 0.941209, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("cristalloMesh:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1.2, 1.2, 1.2 ), Vector3( 0.6, 0.6, 0.6 ), Vector3( 0.1, 0.1, 0.1 ) ]
}

[node name="Cristallo" type="Area"]
script = ExtResource( 2 )

[node name="cristalloMesh" type="MeshInstance" parent="."]
transform = Transform( 1.2, 0, 0, 0, 1.2, 0, 0, 0, 1.2, 7, 0, 0 )
mesh = SubResource( 1 )
material/0 = null
__meta__ = {
"_editor_description_": "
"
}

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.00191, 0.20259, 0 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "fx"

[node name="AnimationItems" type="AnimationPlayer" parent="."]
anims/animationItems = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Cristallo_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
